// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookImage Component matches the snapshot for a faulty image 1`] = `
.c0 {
  height: 261px;
  width: 500px;
  text-align: center;
  box-sizing: border-box;
  padding-top: 7em;
  font-size: 1rem;
  color: #fff;
  background-color: #dc3232;
}

<div
  className="c0"
>
  The given image url cannot be loaded
</div>
`;

exports[`FacebookImage Component matches the snapshot for a landscape image 1`] = `
.c1 {
  width: 600px;
  height: 300px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 261px;
  width: 500px;
  overflow: hidden;
  background-color: #fff;
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="https://yoast.com/app/uploads/2015/06/How_to_choose_keywords_FI.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a portrait image 1`] = `
.c1 {
  width: 300px;
  height: 600px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 236px;
  width: 158px;
  overflow: hidden;
  background-color: #fff;
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="https://yoast.com/app/uploads/2015/09/Author_Joost_x2.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a square image 1`] = `
.c1 {
  width: 300px;
  height: 300px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 158px;
  width: 158px;
  overflow: hidden;
  background-color: #fff;
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1"
    src="https://yoast.com/app/uploads/2018/09/avatar_user_1_1537774226.png"
  />
</div>
`;

exports[`FacebookImage Component matches the snapshot for a too small image 1`] = `
.c0 {
  height: 261px;
  width: 500px;
  text-align: center;
  box-sizing: border-box;
  padding-top: 7em;
  font-size: 1rem;
  color: #fff;
  background-color: #dc3232;
}

<div
  className="c0"
>
  The image you selected is too small for Facebook
</div>
`;

exports[`FacebookImage Component matches the snapshot in the loading state 1`] = `
.c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
  className="c0"
/>
`;
